src/test/deca/context/invalid/class14.deca
class A{
    boolean b;
}

{
    A FIRST=new A();
    boolean b=FIRST;
    
    
}